front2/src/sass/_style.scss
@import "~bulma/sass/utilities/mixins.sass";

html,
body {
  background-color: $black;
  width: 100%;
  min-width: 100%;
}

$array: (0, 1 ,2 ,3 ,4 ,5 ,6 ,7 ,8 ,9);

$app-height: calc(100vh - 2.5rem);

$footer-height: 2.5rem;
$app-pad-bottom: 1.5rem;

#app {
  font-family: Avenir, Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  min-height: $app-height;
  background-color: $color-bg;
  padding-bottom: $app-pad-bottom;
}

.icon {
  &.is-small {
    transform: scale(0.75);
  }

  &.is-medium {
    transform: scale(1.25);
  }

  &.is-large {
    transform: scale(1.5);
  }
}

#footer {
  @extend .is-flex;
  @extend .is-flex.center;
  @extend .v-align-center;

  .icon {
    width: 2.75rem;
  }

  margin-top: 0;
  min-height: $footer-height;
  background-color: $black;
}

@each $point in $array {
  .z-index-#{$point} {
    z-index: $point;
  }

  .p-#{$point} {
    padding: $point * 0.25rem;
  }

  .m-#{$point} {
    margin: $point * 0.25rem;
  }
}

.color-alpha {
  opacity: 0.66;
}

.pad {
  padding: 0.33rem 0.5rem;
}

.v-align-center {
  vertical-align: middle;
}

.navbar {
  $navbar-icon-width: 3rem;
  $navbar-btn-width: 3rem;

  &.is-active {
    @include touch () {
      display: none;
    }
  }

  &-brand {
    width: 100%;
    max-width: 100%;
    align-items: center;
    //align-content: space-between;
  }

  .app-icon {
    display: inline-block;
    width: $navbar-icon-width;
  }

  &__main {
    flex-grow: 1;
    overflow: hidden;
    display: inline-block;
    max-width: calc(100% - #{$navbar-btn-width} - #{$navbar-icon-width} + 0.5rem);

    &-title {
      overflow: hidden;
      white-space: nowrap;
    }
  }

  &__btn {
    display: inline-block;
    margin: 0;
    padding: 0;
    margin-top: 0.3rem;
    flex-grow: 0;
    width: $navbar-btn-width;
  }

  &__title {
    //max-width: 70vw;
    max-height: 2.25rem;
    //overflow: hidden;
  }

  &__options {
    margin: 0.5rem;
    padding: 0.5rem 1rem;
    display: none;
    position: fixed;
    top: 0;
    right: 0;
    z-index: 100;
    min-width: 20rem;
    min-height: 15rem;
    border-radius: $radius;
    color: $dark;
    background-color: $light;

    @include touch () {
      position: relative;
    }

    &.is-active {
      display: block;
    }

    $topleft: 0.2rem;

    &-close {
      position: absolute;
      top: $topleft;
      right: $topleft;
      z-index: 10;
      fill: $color-bg;
      transition: $speed-slow;

      &:focus,
      &:hover {
        transform: scale(1.2);
      }
    }

    @include touch () {
      top: 0;
      left: 0;
      right: 0;
      min-width: 15rem;
    }

    .option {
      position: relative;
      margin-top: 1rem;
      margin-bottom: 1rem;
      padding-bottom: 0.5rem;
      border-bottom: solid 1px rgba($color-mid, $color-alpha);

      &:last-of-type {
        border-bottom: none;
      }

      .control,
      .field {
        margin-left: 0.5rem;

        .label {
          float: left;
          min-width: 5rem;
          margin-right: 0.5rem;
        }
      }

      &.user .control {
        .button {
          margin: 0 auto;
          width: 80%;
        }
      }

      .button,
      .title,
      .name {
        font-weight: bolder;
      }
      .title {
        font-size: 1.25rem;
        margin-bottom: 0.5rem;
      }
      .name {
        font-size: 1rem;
      }
    }
  }

  .navbar-menu.is-active {
    display: none;
  }

  .navbar-item {
    padding: 0.5rem 0;
  }
}

.animate {
  transition: $speed-slow;
}

.columns {
  margin-left: 0;
  margin-right: 0;
}

.columns.is-vtop {
  align-items: flex-start;
}

.columns.is-vbottom {
  align-items: flex-end;
}

.is-radius {
  border-radius: $radius;
}

.is-flex {
  display: flex;
  flex-direction: row;
  align-items: center;

  &.start { align-items: flex-start; }
  &.end { align-items: flex-end; }
  &.center { justify-content: center; }
  &.column { flex-direction: column; }
}

.flex-space-between {
  justify-content: space-between;
}

.flex-space-around {
  justify-content: space-around;
}

.flex-grow {
  flex-grow: 1;
}

.flex-shrink {
  flex-shrink: 1;
}

.flex-wrap {
  flex-wrap: wrap;
}

.flex-nowrap {
  flex-wrap: nowrap;
}

.align-self-start {
  align-self: flex-start;
}

.align-self-end {
  align-self: flex-end;
}

.select-bar {
  margin-left: 0.3rem;
  margin-bottom: 0.5rem;

  button {
    outline: none;
    border: none;
    position: relative;
    margin: 0;
    padding: 0;
    padding-left: 0.5rem;
    font-weight: bolder;
    text-transform: uppercase;
    transition: $speed-slower;

    &.extra-pad {
      padding-left: 1.3rem;
    }

    .tri {
      position: absolute;
      z-index: -1;
      right: -0.35rem;
      transition: $speed-slower;
    }

    span {
      transition: $speed-slower;
      transform: scale(1.05);
    }
  }

  button {
    background-color: $light;
    .tri { fill: $light; }
  }

  button.is-primary {
    background-color: $primary;
    .tri { fill: $primary; }

    span {
      transform: scale(1.15);
    }
  }

  button[disabled] {
    opacity: 1;
    background-color: $grey-light;
    .tri { fill: $grey-light; }
  }
}

.row {
  &__item {}

  &.is-active & {
    &__item {
      border: 1px solid $light;
    }
  }

  .word-break {
    word-break: break-word;
  }

  &__content {
    &-pre {
      padding-top: 0.4rem;
    }

    &-button,
    &-progress {
      margin: 0;
      padding: 0;
      padding-top: 0.35rem;
      min-width: 2.7rem;
    }

    &-button {
      min-width: 1.5rem;
      border-color: transparent;
      background-color: transparent;

      svg {
        transition: $speed-slow;
      }
    }

    &-progress {
      padding-left: 0.25rem;
    }

    &-input {
      border-color: transparent;
      background-color: transparent;

      &.textarea {
        min-height: 1rem;
        height: inherit;
        padding-right: 0.5rem;
      }
    }
  }
}

